@@ -57,18 +57,6 @@ void TabbedArea::draw(gcn::Graphics *graphics)
         return;
     }
 
-    unsigned int i;
-    for (i = 0; i < mTabs.size(); i++)
-    {
-        if (mTabs[i].first == mSelectedTab)
-        {
-            mTabs[i].second->setWidth(getWidth());
-            mTabs[i].second->setHeight(getHeight());
-            mTabs[i].second->logic();
-            break;
-        }
-    }
-
     gcn::TabbedArea::draw(graphics);
 }
 
@@ -141,4 +129,23 @@ void TabbedArea::removeTab(gcn::Tab *tab)
 
     adjustSize();
     adjustTabPositions();
+}
+
+void TabbedArea::adjustSize()
+{
+    int maxTabHeight = 0;
+    unsigned int i;
+    for (i = 0; i < mTabs.size(); i++)
+    {
+        if (mTabs[i].first->getHeight() > maxTabHeight)
+        {
+            maxTabHeight = mTabs[i].first->getHeight();
+        }
+    }
+
+    mTabContainer->setSize(getWidth() - getFrameSize(), maxTabHeight);
+
+    mWidgetContainer->setPosition(1, maxTabHeight + 1);
+    mWidgetContainer->setSize(getWidth() - getFrameSize(),
+                              getHeight() - maxTabHeight - getFrameSize());
 }
